--- a/util.css
+++ b/util.css
@@ -27,3 +27,13 @@
     display: flex;
     flex-direction: row;
 }
+
+.heading2 {
+    font-size: 24px;
+    font-weight: 700;
+    padding: 5px;
+}
+
+.center {
+    text-align: center;
+}
