got splitscreen working with graphing

--- a/output-view.css
+++ b/output-view.css
@@ -3,10 +3,25 @@
 }
 
 
-.output-text-result {
+.output-text-result,
+.output-graph-result {
     padding-left: 5px;
 }
 
 .output-text-result > .title {
+    font-weight: bold;
+}
+
+.output-graph-result canvas {
+    position: absolute;
+}
+
+.output-graph-result .output-graph-result-canvas-container {
+    margin-right: 10px;
+    margin-top: 10px;
+    aspect-ratio: 5 / 3;
+}
+
+.output-graph-result > .title {
     font-weight: bold;
 }
