--- a/output-view.css
+++ b/output-view.css
@@ -14,6 +14,7 @@
 
 .output-graph-result canvas {
     position: absolute;
+    cursor: move;
 }
 
 .output-graph-result .output-graph-result-canvas-container {
