--- a/output-view.css
+++ b/output-view.css
@@ -2,7 +2,6 @@
     color: #ff0000;
 }
 
-
 .output-text-result,
 .output-graph-result {
     padding-left: 5px;
@@ -18,8 +17,7 @@
 }
 
 .output-graph-result .output-graph-result-canvas-container {
-    margin-right: 10px;
-    margin-top: 10px;
+    margin: 10px;
     aspect-ratio: 5 / 3;
 }
 
@@ -29,4 +27,8 @@
 
 .result-input > .title {
     font-weight: bold;
+}
+
+.result-input {
+    margin: 10px;
 }
