looks good to me

--- a/app.css
+++ b/app.css
@@ -1,7 +1,7 @@
 :root {
-    --bg-col: #000;
-    --bg-col-2: #111;
-    --fg-col: #FFF;
+    --bg-col: #111;
+    --bg-col-2: #222;
+    --fg-col: #EEE;
     --fg-col-2: #DDD;
 }
 
